<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pedro.mislugares.MainActivity">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/t_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_nombre"
            android:hint="@string/algo_que_identifique_el_lugar">

            <requestFocus/>
        </EditText>

    <TextView
        android:id="@+id/t_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre"
        android:text="@string/tipo"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/t_tipo"
        android:layout_toRightOf="@+id/t_tipo" android:layout_toEndOf="@+id/t_tipo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t_direccion"
        android:text="@string/direccion"
        android:layout_below="@id/t_tipo"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_direccion"
        android:hint="@string/direcci_n_del_lugar"
        android:inputType="textPostalAddress"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/t_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_below="@id/direccion"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/t_telefono"
        android:layout_toRightOf="@+id/t_direccion"
        android:layout_alignBaseline="@id/t_telefono"
        android:hint="num. de teléfono"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/t_direccion"/>

    <TextView
        android:id="@+id/t_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="URL:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/t_telefono"/>

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="dirección web"
        android:layout_below="@id/t_url"/>

    <TextView
        android:id="@+id/t_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Comentario:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/url"/>

    <EditText
        android:id="@+id/comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="tu comentario"
        android:inputType="textMultiLine"
        android:layout_below="@id/t_comentario"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>